@@ -10,6 +10,8 @@ icondir = ${datadir}/icons/hicolor/64x64/apps
 icon_DATA = osd-lyrics.png
 animdir = ${datadir}/icons/hicolor/16x16/animations
 anim_DATA = osd-lyrics-loading.png
+bgdir = ${datadir}/icons/hicolor/scalable/apps
+bg_DATA = osd-lyrics-osd-bg.svg
 defaulticondir = @OL_ICONDIR@
 defaulticon_DATA = osd-lyrics.png
 #svgdir = ${datadir}/icons/hicolor/scalable/apps
